PIC32MX795 Updated wrong title.

--- a/mcu/pic32mx795/led.htm
+++ b/mcu/pic32mx795/led.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>PIC32MX795F512L &gt;&gt; C/C++</h3>
+<h3>PIC32MX795 &gt;&gt; C/C++</h3>
 <p><b>LED</b></p>
 <hr size="1">
 <p>
