--- a/mcu/pic32mx795/setup_xc32.htm
+++ b/mcu/pic32mx795/setup_xc32.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>PIC32MX795F512L</h3>
+<h3>PIC32MX795</h3>
 <p><b>安裝XC32</b></p>
 <hr size="1">
 <p>
