Massage The case is printed complete and it is time to glue Q10 keyboard on this case.

--- a/umpc/featherwing/massage_hw.htm
+++ b/umpc/featherwing/massage_hw.htm
@@ -121,6 +121,15 @@
 
 由於PCB下邊的兩個螺絲孔，沒有夠用的空間上螺絲，司徒使用半圓形擋板方式製作<br>
 <img src="massage_hw/22.jpg" class="maxSize"><br><br>
+
+打印完成<br>
+<img src="massage_hw/23.jpg" class="maxSize"><br><br>
+
+背面<br>
+<img src="massage_hw/24.jpg" class="maxSize"><br><br>
+
+接著上Q10鍵盤，因為沒有固定的地方，所以左右兩邊凸出來的四個點，剛好可以使用三秒膠黏住<br>
+<img src="massage_hw/25.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
