fanotify In this tutorial, the example shows how to monitor the specific folder with OPEN event.

--- a/driver.htm
+++ b/driver.htm
@@ -271,6 +271,13 @@ Linux Device Driver (LDD)</h3>
   <a href="driver/ldd/systap_fix_perm.htm">
   解決"while resolving probe point"問題</a><br>
 
+&oplus;
+<b>fanotify</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="driver/ldd/fanotify_dir.htm">
+  監看某個特定資料夾的OPEN事件</a><br>
+
 &lowast;
 <a href="driver/ldd/sysfs.htm">
 using sysfs</a><br>
