Massage It is time to put PCB back.

--- a/umpc/featherwing/massage_hw.htm
+++ b/umpc/featherwing/massage_hw.htm
@@ -130,6 +130,21 @@
 
 接著上Q10鍵盤，因為沒有固定的地方，所以左右兩邊凸出來的四個點，剛好可以使用三秒膠黏住<br>
 <img src="massage_hw/25.jpg" class="maxSize"><br><br>
+
+安裝PCB的方式<br>
+<img src="massage_hw/26.jpg" class="maxSize"><br><br>
+
+上面兩個是主要螺絲固定孔位<br>
+<img src="massage_hw/27.jpg" class="maxSize"><br><br>
+
+鑽洞<br>
+<img src="massage_hw/28.jpg" class="maxSize"><br><br>
+
+使用的螺絲<br>
+<img src="massage_hw/29.jpg" class="maxSize"><br><br>
+
+PCB安裝完成<br>
+<img src="massage_hw/30.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
