Massage It is time to put LCD panel back.

--- a/umpc/featherwing/massage_hw.htm
+++ b/umpc/featherwing/massage_hw.htm
@@ -145,6 +145,15 @@
 
 PCB安裝完成<br>
 <img src="massage_hw/30.jpg" class="maxSize"><br><br>
+
+屏<br>
+<img src="massage_hw/31.jpg" class="maxSize"><br><br>
+
+上膠帶<br>
+<img src="massage_hw/32.jpg" class="maxSize"><br><br>
+
+還不錯的樣子<br>
+<img src="massage_hw/33.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
