Massage Fill Q10 keyboard shell.

--- a/umpc/featherwing/massage_hw.htm
+++ b/umpc/featherwing/massage_hw.htm
@@ -154,6 +154,15 @@ PCB安裝完成<br>
 
 還不錯的樣子<br>
 <img src="massage_hw/33.jpg" class="maxSize"><br><br>
+
+由於，下巴不夠美觀，司徒決定進行修補<br>
+<img src="massage_hw/34.jpg" class="maxSize"><br><br>
+
+列印完成<br>
+<img src="massage_hw/35.jpg" class="maxSize"><br><br>
+
+果然顏值高一點點<br>
+<img src="massage_hw/36.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
