Massage It is time to add trackpoint.

--- a/umpc/featherwing/massage_hw.htm
+++ b/umpc/featherwing/massage_hw.htm
@@ -163,6 +163,9 @@ PCB安裝完成<br>
 
 果然顏值高一點點<br>
 <img src="massage_hw/36.jpg" class="maxSize"><br><br>
+
+加上小紅點，顏值更上一層樓～<br>
+<img src="massage_hw/37.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
