JS9331 Added pinout image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2858,6 +2858,9 @@ Build Kernel</a><br>
 <h3><img src="img/photos/js9331.jpg" class="floatLeft"/>
 <b>(MIPS 24Kc)</b> AR9331</h3>
 <hr size="1"><br><br><br><br><br>
+&lowast;
+<a href="mcu/ar9331/pinout.htm">
+腳位</a><br>
 <br><br><br><br>
 
 <div id="smart_mt7688"></div>
