AR9331 Added UART output.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2865,6 +2865,10 @@ Build Kernel</a><br>
 &lowast;
 <a href="mcu/ar9331/pcb.htm">
 開發板</a><br>
+
+&lowast;
+<a href="mcu/ar9331/uart.htm">
+UART輸出</a><br>
 <br><br><br><br>
 
 <div id="smart_mt7688"></div>
