Linkit Smart 7688 Duo Added PCB for development.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2954,6 +2954,10 @@ Build Kernel 3.18.44</a><br>
 腳位</a><br>
 
 &lowast;
+<a href="mcu/mt7688-duo/pcb.htm">
+開發板</a><br>
+
+&lowast;
 <a href="mcu/mt7688-duo/build_kernel-5.4.83.htm">
 Build Kernel 5.4.83</a><br>
 
