Added F133 and T133 titles.

--- a/mcu.htm
+++ b/mcu.htm
@@ -138,6 +138,8 @@
   <a href="#rm08s"><img src="img/photos/rm08s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688"/></a>
   <a href="#ubw32"><img src="img/photos/ubw32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS M4K) PIC32MX795"/></a>
   <a href="#risc-v"><img src="img/photos/risc-v.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RISC-V"/></a>
+  <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) F133"/></a>
+  <a href="#t133"><img src="img/photos/t133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) T133"/></a>
   <a href="#gd32vf103"><img src="img/photos/gd32vf103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V) GD32VF103"/></a>
   <a href="#k210"><img src="img/photos/k210.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V IMAFDC) K210"/></a>
   <a href="#intel"><img src="img/photos/intel.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Intel"/></a>
@@ -3013,6 +3015,18 @@ RISC-V</h3>
 &lowast;
 <a href="mcu/risc-v/reg.htm">
 Register</a><br>
+<br><br><br><br>
+
+<div id="f133"></div>
+<h3><img src="img/photos/f133.jpg" class="floatLeft"/>
+<b>(RISC-V)</b> F133</h3>
+<hr size="1"><br><br><br><br><br>
+<br><br><br><br>
+
+<div id="t133"></div>
+<h3><img src="img/photos/t133.jpg" class="floatLeft"/>
+<b>(RISC-V)</b> T133</h3>
+<hr size="1"><br><br><br><br><br>
 <br><br><br><br>
 
 <div id="gd32vf103"></div>
