MT7688 Duo It is time to lear MIPS programming in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2966,6 +2966,14 @@ Build Kernel 5.4.83</a><br>
 &lowast;
 <a href="mcu/mt7688-duo/fix_nod.htm">
 解決"can't open /dev/null /dev/console: No such file or directory"問題</a><br>
+
+&oplus;
+<b>Assembly</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688-duo/asm_setup.htm">
+  開發環境</a><br>
+
 <br><br><br><br>
 
 <div id="rm08s"></div>
