MT7688 Duo This tutorial shows how to blink LED in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2974,6 +2974,10 @@ Build Kernel 5.4.83</a><br>
   <a href="mcu/mt7688-duo/asm_setup.htm">
   開發環境</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688-duo/asm_led.htm">
+  LED</a><br>
+
 <br><br><br><br>
 
 <div id="rm08s"></div>
