MT7688 Duo This tutorial shows how to read button value and then set to LED.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2978,6 +2978,9 @@ Build Kernel 5.4.83</a><br>
   <a href="mcu/mt7688-duo/asm_led.htm">
   LED</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688-duo/asm_btn.htm">
+  Button</a><br>
 <br><br><br><br>
 
 <div id="rm08s"></div>
