MT7688 Duo Refined code.

--- a/mcu/mt7688-duo/asm_btn.htm
+++ b/mcu/mt7688-duo/asm_btn.htm
@@ -81,14 +81,10 @@ main.s
 
     .section .init
 _start:
-    b hw_reset
-    nop
-    b sw_reset
-    nop
+    b reset
 
     .text
-hw_reset:
-sw_reset:
+reset:
     li $8, GPIO1_MODE
     lw $9, 0($8)
     or $9, (1 &lt;&lt; WDT_MODE)
