--- a/mcu/mt7688-duo/asm_led.htm
+++ b/mcu/mt7688-duo/asm_led.htm
@@ -75,14 +75,10 @@ main.s
 
     .section .init
 _start:
-    b hw_reset
-    nop
-    b sw_reset
-    nop
+    b reset
 
     .text
-hw_reset:
-sw_reset:
+reset:
     li $8, 0xb0000604
     li $9, 0xffffffff
     sw $9, 0($8)
