MIPS Added instruction image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2807,6 +2807,10 @@ MIPS</h3>
 Register</a><br>
 
 &lowast;
+<a href="mcu/mips/int.htm">
+Instruction Set</a><br>
+
+&lowast;
 <a href="mcu/mips/memory_map.htm">
 Memory Map(kuseg、kseg0、kseg1、kseg2)</a><br>
 
