MT7688 Duo It is very weird that we cannot use same register (rs and rt) in xor instruction. I think this should be a bug in MT7688 processor (MIPS 24KEc).

--- a/mcu.htm
+++ b/mcu.htm
@@ -2968,6 +2968,10 @@ Build Kernel 3.18.44</a><br>
 Build Kernel 5.4.83</a><br>
 
 &lowast;
+<a href="mcu/mt7688-duo/fix_xor.htm">
+神奇的XOR問題(rs、rt不能是同一組)</a><br>
+
+&lowast;
 <a href="mcu/mt7688-duo/fix_nod.htm">
 解決"can't open /dev/null /dev/console: No such file or directory"問題</a><br>
 
