MT7688 Duo This tutorial shows how to configure CPU clock with external XTAL 40MHz.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2985,6 +2985,10 @@ Build Kernel 5.4.83</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/mt7688-duo/asm_led.htm">
   LED</a><br>
+ 
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688-duo/asm_clk.htm">
+  Clock</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="mcu/mt7688-duo/asm_btn.htm">
