MT7688 Duo Added interrupt table.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2964,6 +2964,10 @@ Build Kernel 3.18.44</a><br>
 開發板</a><br>
 
 &lowast;
+<a href="mcu/mt7688-duo/int.htm">
+中斷表</a><br>
+
+&lowast;
 <a href="mcu/mt7688-duo/build_kernel-5.4.83.htm">
 Build Kernel 5.4.83</a><br>
 
