MT7688 Duo Branch and Jump instructions are very different. Jump uses absolute address but Branch uses relative address. We cannot make sure whether program is always runnning from pre-defined address. So, it is recommended to use branch instruction in your assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2972,8 +2972,8 @@ Build Kernel 3.18.44</a><br>
 Build Kernel 5.4.83</a><br>
 
 &lowast;
-<a href="mcu/mt7688-duo/fix_xor.htm">
-神奇的XOR問題(rs、rt不能是同一組)</a><br>
+<a href="mcu/mt7688-duo/fix_jump.htm">
+Branch、Jump指令的差異</a><br>
 
 &lowast;
 <a href="mcu/mt7688-duo/fix_nod.htm">
