MT7688 Duo Refined code.

--- a/mcu/mt7688-duo/asm_led.htm
+++ b/mcu/mt7688-duo/asm_led.htm
@@ -82,13 +82,11 @@ reset:
     li $8, 0xb0000604
     li $9, 0xffffffff
     sw $9, 0($8)
-    nop
 
 loop:
     li $8, 0xb0000624
     li $9, 0xffffffff
     sw $9, 0($8)
-    nop
 
     li $8, 5000
 0:
@@ -99,7 +97,6 @@ loop:
     li $8, 0xb0000624
     li $9, 0x00000000
     sw $9, 0($8)
-    nop
 
     li $8, 5000
 0:
@@ -107,7 +104,7 @@ loop:
     bnez $8, 0b
     nop
 
-    j loop
+    b loop
     nop
 </pre><br>
 
