MT7688 Duo SPI runs from 0xbc000000.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2968,6 +2968,10 @@ Build Kernel 3.18.44</a><br>
 中斷表</a><br>
 
 &lowast;
+<a href="mcu/mt7688-duo/spi_addr.htm">
+載入SPI的執行位址</a><br>
+
+&lowast;
 <a href="mcu/mt7688-duo/build_kernel-5.4.83.htm">
 Build Kernel 5.4.83</a><br>
 
