MT7688 Duo Refined code.

--- a/mcu/mt7688-duo/asm_clk.htm
+++ b/mcu/mt7688-duo/asm_clk.htm
@@ -114,6 +114,11 @@ _start:
  
     .text
 reset:
+    mfc0 $10, $16
+    and $10, 0xfffffff8
+    ori $10, 0x00000003
+    mtc0 $10, $16
+
     li $8, SYSCFG0
     lw $9, 0($8)
     or $9, (1 &lt;&lt; 6)
@@ -132,7 +137,7 @@ loop:
     move $10, $9
     sw $9, 0($8)
 
-    li $8, 5000
+    li $8, 500000
 0:
     addi $8, $8, -1
     bnez $8, 0b
