--- a/mcu.htm
+++ b/mcu.htm
@@ -2968,6 +2968,10 @@ Build Kernel 3.18.44</a><br>
 中斷表</a><br>
 
 &lowast;
+<a href="mcu/mt7688-duo/mmap.htm">
+Memory Map</a><br>
+
+&lowast;
 <a href="mcu/mt7688-duo/spi_addr.htm">
 載入SPI的執行位址</a><br>
 
