MT7688 Duo Added clock diagram.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2972,6 +2972,10 @@ Build Kernel 3.18.44</a><br>
 Memory Map</a><br>
 
 &lowast;
+<a href="mcu/mt7688-duo/clk.htm">
+Clock Diagram</a><br>
+
+&lowast;
 <a href="mcu/mt7688-duo/spi_addr.htm">
 載入SPI的執行位址</a><br>
 
