MT7688 Duo I don't know why we need to enable Kseg0 so that CPU can run at full speed. And CPU cannot set source as XTAL frequency, strange !

--- a/mcu/mt7688-duo/asm_clk.htm
+++ b/mcu/mt7688-duo/asm_clk.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>MT7688 &gt;&gt; Assembly</h3>
-<p><b>Clock</b></p>
+<p><b>CPU Clock</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -57,20 +57,21 @@ MT7688支援25MHz、40MHz兩種XTAL<br>
 目前MT7688 Duo板子使用40MHz<br>
 <img src="asm_clk/2.jpg" class="maxSize"><br><br>
 
-司徒整理表格：
+CPU設定表格如下：
 </p>
 
 <table>
 <tr><th>CPU最高頻率</th><th>XTAL</th><th>Register設定</th></tr>
 <tr><td>580MHz</td><td>40MHz</td><td>XTAL_FREQ_SEL=1<br>CPU_FRM_BBP=0<br>CPU_FRM_XTAL=0</td></tr>
 <tr><td>575MHz</td><td>25MHz</td><td>XTAL_FREQ_SEL=0<br>CPU_FRM_BBP=0<br>CPU_FRM_XTAL=0</td></tr>
-<tr><td>480MHz</td><td>40MHz</td><td>XTAL_FREQ_SEL=1<br>CPU_FRM_BBP=1</td></tr>
-<tr><td>480MHz</td><td>25MHz</td><td>XTAL_FREQ_SEL=0<br>CPU_FRM_BBP=1</td></tr>
+<tr><td>480MHz</td><td>40MHz</td><td>XTAL_FREQ_SEL=1<br>CPU_FRM_BBP=1<br>EN_BBP_CLK=1<br>DIS_BBP_SLEEP=1</td></tr>
+<tr><td>480MHz</td><td>25MHz</td><td>XTAL_FREQ_SEL=0<br>CPU_FRM_BBP=1<br>EN_BBP_CLK=1<br>DIS_BBP_SLEEP=1</td></td></tr>
 <tr><td>40MHz</td><td>40MHz</td><td>XTAL_FREQ_SEL=1<br>CPU_FRM_XTAL=1</td></tr>
 <tr><td>25MHz</td><td>25MHz</td><td>XTAL_FREQ_SEL=0<br>CPU_FRM_XTAL=1</td></tr>
-</table><br>
-
+</table>
 <p>
+P.S. 目前不知為何MT7688 CPU無法直接使用XTAL的頻率跑<br><br>
+
 XTAL_FREQ_SEL設定外接的晶振頻率<br>
 <img src="asm_clk/3.jpg" class="maxSize"><br><br>
 
@@ -147,7 +148,7 @@ loop:
     nop
 </pre>
 <p>
-P.S. CPU頻率 = 580MHz * (1 / 1) = 580MHz<br><br>
+P.S. CPU頻率 = 580MHz * (1 / 1) = 580MHz，目前不知為何MT7688需要開啟CP0 KSeg0的Cacheable，才可以讓CPU速度上來，這部份是參考UBoot程式碼，另外，CPU也無法直接使用XTAL的頻率<br><br>
 
 完成<br>
 <img src="asm_led/18.jpg" class="maxSize"><br>
