--- a/mcu.htm
+++ b/mcu.htm
@@ -3003,12 +3003,12 @@ Branch、Jump指令的差異</a><br>
   LED</a><br>
  
   &emsp;&emsp;&lowast;
-  <a href="mcu/mt7688-duo/asm_clk.htm">
-  Clock</a><br>
-
-  &emsp;&emsp;&lowast;
   <a href="mcu/mt7688-duo/asm_btn.htm">
   Button</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688-duo/asm_clk.htm">
+  CPU Clock</a><br>
 <br><br><br><br>
 
 <div id="rm08s"></div>
