MT7688 Duo Updated source as MT7620.

--- a/mcu/mt7688-duo/clk.htm
+++ b/mcu/mt7688-duo/clk.htm
@@ -48,7 +48,7 @@
 <p><b>Clock Diagram</b></p>
 <hr size="1">
 <p>
-如下：<br>
+由於目前並沒有MT7688的Clock相關資料，下圖是使用MT7620的Clock Diagram：<br>
 <img src="clk/1.jpg" class="maxSize"><br>
 <img src="clk/2.jpg" class="maxSize">
 </p>
