--- a/mcu/mt7688-duo/mmap.htm
+++ b/mcu/mt7688-duo/mmap.htm
@@ -48,7 +48,7 @@
 <p><b>Memory Map</b></p>
 <hr size="1">
 <p>
-如下：<br>
+由於目前並沒有MT7688的Memory Map相關資料，下圖是使用MT7620的Memory Map：<br>
 <img src="mmap/1.jpg" class="maxSize">
 </p>
 
