MT7688 Duo Added reference link.

--- a/mcu/mt7688-duo/clk.htm
+++ b/mcu/mt7688-duo/clk.htm
@@ -48,6 +48,9 @@
 <p><b>Clock Diagram</b></p>
 <hr size="1">
 <p>
+參考資料：<br>
+1. <a href="https://w.electrodragon.com/w/images/3/34/MT7620_Datasheet.pdf">MT7620_Datasheet</a><br><br>
+
 由於目前並沒有MT7688的Clock相關資料，下圖是使用MT7620的Clock Diagram：<br>
 <img src="clk/1.jpg" class="maxSize"><br>
 <img src="clk/2.jpg" class="maxSize">
