--- a/mcu/mt7688-duo/mmap.htm
+++ b/mcu/mt7688-duo/mmap.htm
@@ -48,6 +48,9 @@
 <p><b>Memory Map</b></p>
 <hr size="1">
 <p>
+參考資料：<br>
+1. <a href="https://w.electrodragon.com/w/images/3/34/MT7620_Datasheet.pdf">MT7620_Datasheet</a><br><br>
+
 由於目前並沒有MT7688的Memory Map相關資料，下圖是使用MT7620的Memory Map：<br>
 <img src="mmap/1.jpg" class="maxSize">
 </p>
