MT7688 Duo Revised.

--- a/mcu/mt7688-duo/asm_clk.htm
+++ b/mcu/mt7688-duo/asm_clk.htm
@@ -59,19 +59,46 @@ MT7688支援25MHz、40MHz兩種XTAL<br>
 
 CPU設定表格如下：
 </p>
-
 <table>
 <tr><th>CPU最高頻率</th><th>XTAL</th><th>Register設定</th></tr>
-<tr><td>580MHz</td><td>40MHz</td><td>XTAL_FREQ_SEL=1<br>CPU_FRM_BBP=0<br>CPU_FRM_XTAL=0</td></tr>
-<tr><td>575MHz</td><td>25MHz</td><td>XTAL_FREQ_SEL=0<br>CPU_FRM_BBP=0<br>CPU_FRM_XTAL=0</td></tr>
-<tr><td>480MHz</td><td>40MHz</td><td>XTAL_FREQ_SEL=1<br>CPU_FRM_BBP=1<br>EN_BBP_CLK=1<br>DIS_BBP_SLEEP=1</td></tr>
-<tr><td>480MHz</td><td>25MHz</td><td>XTAL_FREQ_SEL=0<br>CPU_FRM_BBP=1<br>EN_BBP_CLK=1<br>DIS_BBP_SLEEP=1</td></td></tr>
-<tr><td>40MHz</td><td>40MHz</td><td>XTAL_FREQ_SEL=1<br>CPU_FRM_XTAL=1</td></tr>
-<tr><td>25MHz</td><td>25MHz</td><td>XTAL_FREQ_SEL=0<br>CPU_FRM_XTAL=1</td></tr>
-</table>
+<tr><td>580MHz</td><td>40MHz</td><td>
+    XTAL_FREQ_SEL = 1<br>
+    DIS_BBP_SLEEP = 0<br>
+    EN_BBP_CLK = 0<br>
+    CPU_FRM_BBP = 0<br>
+    CPU_FRM_XTAL = 0</td></tr>
+<tr><td>575MHz</td><td>25MHz</td><td>
+    XTAL_FREQ_SEL = 0<br>
+    DIS_BBP_SLEEP = 0<br>
+    EN_BBP_CLK = 0<br>
+    CPU_FRM_BBP = 0<br>
+    CPU_FRM_XTAL = 0</td></tr>
+<tr><td>480MHz</td><td>40MHz</td><td>
+    XTAL_FREQ_SEL = 1<br>
+    DIS_BBP_SLEEP = 1<br>
+    EN_BBP_CLK = 1<br>
+    CPU_FRM_BBP = 1<br>
+    CPU_FRM_XTAL = 0</td></tr>
+<tr><td>480MHz</td><td>25MHz</td><td>
+    XTAL_FREQ_SEL = 0<br>
+    DIS_BBP_SLEEP = 1<br>
+    EN_BBP_CLK = 1<br>
+    CPU_FRM_BBP = 1<br>
+    CPU_FRM_XTAL = 0</td></tr>
+<tr><td>40MHz</td><td>40MHz</td><td>
+    XTAL_FREQ_SEL = 1<br>
+    DIS_BBP_SLEEP = 0<br>
+    EN_BBP_CLK = 0<br>
+    CPU_FRM_BBP = 0<br>
+    CPU_FRM_XTAL = 1</td></tr>
+<tr><td>25MHz</td><td>25MHz</td><td>
+    XTAL_FREQ_SEL = 0<br>
+    DIS_BBP_SLEEP = 0<br>
+    EN_BBP_CLK = 0<br>
+    CPU_FRM_BBP = 0<br>
+    CPU_FRM_XTAL = 1</td></tr>
+</table><br>
 <p>
-P.S. 目前不知為何MT7688 CPU無法直接使用XTAL的頻率跑<br><br>
-
 XTAL_FREQ_SEL設定外接的晶振頻率<br>
 <img src="asm_clk/3.jpg" class="maxSize"><br><br>
 
@@ -90,6 +117,8 @@ CPU frequency = PLL_FREQ * (CPU_FFRAC / CPU_FDIV)
 <p>
 範例：<br>
 XTAL_FREQ_SEL = 1<br>
+DIS_BBP_SLEEP = 0<br>
+EN_BBP_CLK = 0<br>
 CPU_FRM_BBP = 0<br>
 CPU_FRM_XTAL = 0<br>
 PLL_FREQ = 580MHz<br>
@@ -148,7 +177,7 @@ loop:
     nop
 </pre>
 <p>
-P.S. CPU頻率 = 580MHz * (1 / 1) = 580MHz，目前不知為何MT7688需要開啟CP0 KSeg0的Cacheable，才可以讓CPU速度上來，這部份是參考UBoot程式碼，另外，CPU也無法直接使用XTAL的頻率<br><br>
+P.S. CPU頻率 = 580MHz * (1 / 1) = 580MHz，目前不知為何MT7688需要開啟CP0 KSeg0的Cacheable，才可以讓CPU速度上來，這部份是參考UBoot程式碼<br><br>
 
 完成<br>
 <img src="asm_led/18.jpg" class="maxSize"><br>
