MT7688 Duo This tutorial shows how to use timer0 in polling mode.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3009,6 +3009,10 @@ Branch、Jump指令的差異</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/mt7688-duo/asm_clk.htm">
   CPU Clock</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688-duo/asm_t0_poll.htm">
+  Timer0(Polling)</a><br>
 <br><br><br><br>
 
 <div id="rm08s"></div>
