--- a/mcu.htm
+++ b/mcu.htm
@@ -3013,6 +3013,10 @@ Branch、Jump指令的差異</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/mt7688-duo/asm_t0_poll.htm">
   Timer0(Polling)</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688-duo/asm_t1_poll.htm">
+  Timer1(Polling)</a><br>
 <br><br><br><br>
 
 <div id="rm08s"></div>
