--- a/mcu.htm
+++ b/mcu.htm
@@ -3017,6 +3017,10 @@ Branch、Jump指令的差異</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/mt7688-duo/asm_t1_poll.htm">
   Timer1(Polling)</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688-duo/asm_wdt_poll.htm">
+  Watchdog(Polling)</a><br>
 <br><br><br><br>
 
 <div id="rm08s"></div>
