MT7688 Duo Refined code.

--- a/mcu/mt7688-duo/asm_led.htm
+++ b/mcu/mt7688-duo/asm_led.htm
@@ -73,11 +73,11 @@ main.s
     .extern _start
     .set noreorder
 
-    .section .init
+    .text
 _start:
     b reset
 
-    .text
+    .org 0x400
 reset:
     li $8, 0xb0000604
     li $9, 0xffffffff
@@ -118,13 +118,10 @@ ENTRY(_start)
 
 SECTIONS
 {
-    ENTRY(_start)
-    . = 0x0000;
-    .init : { *(.init) }
-    . = 0x0400;
+    . = 0x00000000;
     .text : { *(.text) }
     .data : { *(.data) }
-    .bss  : { *(.bss) }
+    .bss  : { *(.bss)  }
 }
 </pre><br>
 
