--- a/mcu/mt7688-duo/asm_btn.htm
+++ b/mcu/mt7688-duo/asm_btn.htm
@@ -79,11 +79,11 @@ main.s
     .equiv WDT_MODE,    14
     .equiv LED,         (44 - 32)
 
-    .section .init
+    .text
 _start:
     b reset
 
-    .text
+    .org 0x400
 reset:
     li $8, GPIO1_MODE
     lw $9, 0($8)
