--- a/mcu/mt7688-duo/asm_clk.htm
+++ b/mcu/mt7688-duo/asm_clk.htm
@@ -138,11 +138,11 @@ main.s
     .equiv GPIO_DATA_1, 0xb0000624
     .equiv LED,         (44 - 32)
 
-    .section .init
+    .text
 _start:
     b reset
  
-    .text
+    .org 0x400
 reset:
     mfc0 $10, $16
     and $10, 0xfffffff8
