--- a/mcu/mt7688-duo/asm_t1_poll.htm
+++ b/mcu/mt7688-duo/asm_t1_poll.htm
@@ -82,11 +82,11 @@ main.s
     .equiv GPIO_DATA_1, 0xb0000624
     .equiv LED,         (44 - 32)
 
-    .section .init
+    .text
 _start:
     b reset
   
-    .text
+    .org 0x400
 reset:
     li $8, GPIO_CTRL_1
     li $9, (1 &lt;&lt; LED)
