GPD MicroPC In order to prevent noise generated from fan, I decided to remove fan protection cover. I think this is the best method to fix fan issue.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1002,6 +1002,10 @@ GPD MicroPC</h3>
 <a href="umpc/micropc/uart.htm">
 UART改造</a><br>
 
+&lowast;
+<a href="umpc/micropc/fix_fan.htm">
+解決風扇噪音問題</a><br>
+
 &oplus;
 <b>Debian 10</b><br>
 
