GPD MicroPC typo.

--- a/umpc/micropc/setup_debian10.htm
+++ b/umpc/micropc/setup_debian10.htm
@@ -60,7 +60,7 @@
 4. 安裝到選擇套件時，記得選擇<b>SSH Server</b>，因為安裝後，開機無畫面，需要SSH登入更新Kernel<br>
 <img src="setup_debian10/1.jpg" class="maxSize"><br><br>
 
-5. 登入SHH後，執行如下命令：
+5. 登入SSH後，執行如下命令：
 </p>
 <pre>
 $ cd
