Podman Added podman.sock commands.

--- a/system.htm
+++ b/system.htm
@@ -78,6 +78,7 @@
   <a href="#centos"><img src="img/photos/centos.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CentOS"/></a>
   <a href="#windows"><img src="img/photos/windows.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Windows"/></a>
   <a href="#docker"><img src="img/photos/docker.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Docker"/></a>
+  <a href="#podman"><img src="img/photos/podman.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Podman"/></a>
 </p>
 </div>
 
@@ -428,6 +429,15 @@ docker.sock</a><br>
 &lowast;
 <a href="system/docker/fix_sending.htm">
 為何"Sending build context to Docker daemon"會送很大的檔案</a><br>
+<br><br><br><br>
+
+<div id="podman"></div>
+<h3><img src="img/photos/podman.jpg" class="floatLeft"/>
+Podman</h3>
+<hr size="1"><br><br><br><br><br>
+&lowast;
+<a href="system/podman/sock.htm">
+podman.sock</a><br>
 <br><br><br><br>
 
 </p>
