GPD Win This tutorial shows how to install and configure Debian 11.0 on GPD Win.

--- a/handheld.htm
+++ b/handheld.htm
@@ -1540,7 +1540,14 @@ GPD Win</h3>
 
 &lowast;
 <a href="handheld/gpdwin/debian8.htm">
-安裝Debian 8.0</a>
+安裝Debian 8.0</a><br>
+
+&oplus;
+<b>Debian 11.0</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="handheld/gpdwin/debian11.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="zpg"></div>
