GPD Win This tutorial show how to build retroarch on Debian 11.

--- a/handheld.htm
+++ b/handheld.htm
@@ -1548,6 +1548,10 @@ GPD Win</h3>
   &emsp;&emsp;&lowast;
   <a href="handheld/gpdwin/debian11.htm">
   安裝系統</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="handheld/gpdwin/build_retroarch.htm">
+  build retroarch</a><br>
 <br><br><br><br>
 
 <div id="zpg"></div>
