GPD Win Fix 'debian.org.cert.pem' issue.

--- a/handheld.htm
+++ b/handheld.htm
@@ -1552,6 +1552,10 @@ GPD Win</h3>
   &emsp;&emsp;&lowast;
   <a href="handheld/gpdwin/build_retroarch.htm">
   build retroarch</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="handheld/gpdwin/fix_pem.htm">
+  解決"No rule to make target debian/certs/benh@debian.org.cert.pem"問題</a><br>
 <br><br><br><br>
 
 <div id="zpg"></div>
