GPD Win Updated installation steps for debain 11.

--- a/handheld/gpdwin/debian11.htm
+++ b/handheld/gpdwin/debian11.htm
@@ -75,89 +75,18 @@ $ sudo nano /etc/default/grub
   GRUB_CMDLINE_LINUX="fbcon=rotate:1"
 
 $ sudo grub-mkconfig -o /boot/grub/grub.cfg
-</pre><br>
-
+</pre>
 <p>
-安裝完成後，音量快捷鍵已經支持，但是缺少亮度調整，因此，司徒使用使用<b>Win + Vol-</b>、<b>Win + Vol+</b>，當作亮度調整快捷鍵(配置檔位於：~/.brightness.cfg)：<br>
-Application &gt; Settings &gt; Keyboard<br>
-<img src="../gpdwin-al/debian9/install_xfce/2.jpg" class="maxSize"><br><br>
+P.S. 目前亮度無法調整，因為沒有intel_backlight可以控制<br><br>
 
 <b>Win + D</b>顯示桌面：<br>
 Application &gt; Settings &gt; Window Manager<br>
 <img src="../gpdwin-al/debian9/install_xfce/3.jpg" class="maxSize"><br><br>
 
-設定開機亮度(自動讀取~/.brightness.cfg)：<br>
-Application &gt; Settings &gt; Session and Startup<br>
-<img src="../gpdwin-al/debian9/install_xfce/4.jpg" class="maxSize"><br><br>
-
 設定Touchscreen<br>
 Application &gt; Settings &gt; Session and Startup<br>
 <img src="../gpdwin-al/debian9/install_xfce/5.jpg" class="maxSize"><br><br>
 
-lcd
-</p>
-<pre>
-#!/usr/bin/python
-import os
-
-bright_path = '/home/steward/.brightness.cfg'
-
-f = open(bright_path)
-c = f.read().replace('\r', '').replace('\n', '')
-f.close()
-
-os.system('echo ' + str(c) + ' > /sys/class/backlight/intel_backlight/brightness')
-</pre><br>
-
-<p>
-lcd+
-</p>
-<pre>
-#!/usr/bin/python
-import os
-
-bright_path = '/home/steward/.brightness.cfg'
-
-f = open(bright_path)
-c = f.read().replace('\r', '').replace('\n', '')
-f.close()
-
-c = int(c) + 5
-if c &gt; 100:
-    c = 100
-
-f = open(bright_path, 'w')
-f.write(str(c))
-f.close()
-
-os.system('echo ' + str(c) + ' > /sys/class/backlight/intel_backlight/brightness')
-</pre><br>
-
-<p>
-lcd-
-</p>
-<pre>
-#!/usr/bin/python
-import os
-
-bright_path = '/home/steward/.brightness.cfg'
-
-f = open(bright_path)
-c = f.read().replace('\r', '').replace('\n', '')
-f.close()
-
-c = int(c) - 5
-if c &lt; 0:
-    c = 0
-
-f = open(bright_path, 'w')
-f.write(str(c))
-f.close()
-
-os.system('echo ' + str(c) + ' > /sys/class/backlight/intel_backlight/brightness')
-</pre><br>
-
-<p>
 tp
 </p>
 <pre>
