GPD Win Updated installation stpes.

--- a/handheld/gpdwin-al/debian9/install_lxde.htm
+++ b/handheld/gpdwin-al/debian9/install_lxde.htm
@@ -61,9 +61,9 @@ $ sudo vim /etc/X11/xorg.conf.d/20-gpudriver.conf
 
 <pre class="brush:cpp">
 Section "Device"
- Identifier "gma500_gfx"
- Driver "fbdev"
- Option "Rotate" "CW"
+    Identifier "gma500_gfx"
+    Driver "fbdev"
+    Option "Rotate" "CW"
 EndSection
 </pre><br>
 
@@ -73,8 +73,8 @@ $ sudo vim /etc/X11/xorg.conf.d/40-monitor.conf
 
 <pre class="brush:cpp">
 Section "Monitor"
- Identifier "LVDS-0"
- Option "Rotate" "right"
+    Identifier "LVDS-0"
+    Option "Rotate" "right"
 EndSection
 </pre><br>
 
@@ -91,7 +91,7 @@ $ sudo grub-mkconfig -o /boot/grub/grub.cfg
 </pre><br>
 
 <p>
-4. 安裝Wifi驅動
+4. 安裝Wifi驅動(先透過其它USB網卡上網)
 </p>
 
 <pre>
