--- a/handheld/gpdwin/debian8.htm
+++ b/handheld/gpdwin/debian8.htm
@@ -71,26 +71,26 @@ $ sudo grub-install --removable --boot-directory=/mnt/boot --efi-directory=/mnt/
 
 <pre>
 $ sudo vim /etc/X11/xorg.conf.d/20-gpudriver.conf
-  Section "Device"
-   Identifier "gma500_gfx"
-   Driver "fbdev"
-   Option "Rotate" "CW"
-  EndSection
+    Section "Device"
+        Identifier "gma500_gfx"
+        Driver "fbdev"
+        Option "Rotate" "CW"
+    EndSection
 
 $ sudo vim /etc/X11/xorg.conf.d/40-monitor.conf
-  Section "Monitor"
-   Identifier "LVDS-0"
-   Option "Rotate" "right"
-  EndSection
+    Section "Monitor"
+        Identifier "LVDS-0"
+        Option "Rotate" "right"
+    EndSection
 
 $ sudo nano /etc/default/grub
-  GRUB_CMDLINE_LINUX="fbcon=rotate:1"
+    GRUB_CMDLINE_LINUX="fbcon=rotate:1"
 
 $ sudo grub-mkconfig -o /boot/grub/grub.cfg
 </pre><br>
 
 <p>
-5. Wifi(brcmfmac4356-pcie.bin, brcmfmac4356-pcie.txt)
+5. Wifi(brcmfmac4356-pcie.bin, brcmfmac4356-pcie.txt)(先透過其它USB網卡上網)
 </p>
 <pre>
 $ sudo apt-get update
