--- a/handheld/gpdwin-al/debian9/install_xfce.htm
+++ b/handheld/gpdwin-al/debian9/install_xfce.htm
@@ -53,10 +53,11 @@
 1. 下載Debian 9.0 ISO並且制作USB開機片<br>
 2. 接著透過USB開機(Fn + F7)並按照一般安裝步驟就可以安裝完成<br>
 3. 於安裝中，選擇使用界面為XFCE<br>
-4. 安裝其它需要套件
+4. 安裝其它需要套件(先透過其它USB網卡上網)
 </p>
-
 <pre>
+$ sudo apt-get install xinput sudo python -y
+
 $ cd
 $ wget https://github.com/steward-fu/gpdwin/releases/download/v1.0/util.7z
 $ 7za x util.7z
