GPD Win How to turn DRM debug level on.

--- a/handheld.htm
+++ b/handheld.htm
@@ -1554,8 +1554,12 @@ GPD Win</h3>
   build retroarch</a><br>
   
   &emsp;&emsp;&lowast;
+  <a href="handheld/gpdwin/drm_debug.htm">
+  如何開啟DRM Debug Level</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="handheld/gpdwin/fix_pem.htm">
-  解決"No rule to make target debian/certs/benh@debian.org.cert.pem"問題</a><br>
+  解決"No rule to make target debian/certs/benh@debian.org.cert.pem"問題</a><br>  
 <br><br><br><br>
 
 <div id="zpg"></div>
