GPD Win Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -1539,6 +1539,10 @@ GPD Win</h3>
 介紹</a><br>
 
 &lowast;
+<a href="handheld/gpdwin/teardown.htm">
+拆機</a><br>
+
+&lowast;
 <a href="handheld/gpdwin/debian8.htm">
 安裝Debian 8.0</a><br>
 
