--- a/handheld.htm
+++ b/handheld.htm
@@ -1560,6 +1560,10 @@ GPD Win</h3>
   &emsp;&emsp;&lowast;
   <a href="handheld/gpdwin/drm_debug.htm">
   如何開啟DRM Debug Level</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="handheld/gpdwin/fix_i915.htm">
+  解決i915.ko載入的問題</a><br>  
 
   &emsp;&emsp;&lowast;
   <a href="handheld/gpdwin/fix_pem.htm">
