FC3000 Workaround to fix eduke32 crash issue.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4719,6 +4719,10 @@ V1、V2升級刷機教學</a><br>
 如何在MicroSD啟動下改成SPI啟動</a><br>
 
 &lowast;
+<a href="handheld/fc3000/fix_eduke32.htm">
+解決eduke32詭異的crash問題</a><br>
+
+&lowast;
 <a href="handheld/fc3000/uboot_addr0.htm">
 解決"UBoot Failed to map physical memory"問題</a><br>
 
