Google Pixel 3a XL Added review page.

--- a/phone.htm
+++ b/phone.htm
@@ -85,6 +85,7 @@
   <a href="#xt897"><img src="img/photos/xt897.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Motorola XT897"/></a>
   <a href="#pro1"><img src="img/photos/pro1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="F(x)tec Pro1"/></a>
   <a href="#titan"><img src="img/photos/titan.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Unihertz Titan"/></a>
+  <a href="#pixel3axl"><img src="img/photos/pixel3axl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Google Pixel 3a XL"/></a>
 </p>
 </div>
 
@@ -2019,6 +2020,15 @@ Unihertz Titan</h3>
 &lowast;
 <a href="phone/titan/fix_launcher.htm">
 解決返回待機後依舊執行原廠Launcher的問題</a><br>
+<br><br><br><br>
+
+<div id="pixel3axl"></div>
+<h3><img src="img/photos/pixel3axl.jpg" class="floatLeft"/>
+Google Pixel 3a XL</h3>
+<hr size="1"><br><br><br><br><br>
+&lowast;
+<a href="phone/pixel3axl/review.htm">
+介紹</a><br>
 <br><br><br><br>
 
 </p>
