--- a/phone.htm
+++ b/phone.htm
@@ -2029,6 +2029,10 @@ Google Pixel 3a XL</h3>
 &lowast;
 <a href="phone/pixel3axl/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="phone/pixel3axl/fix_fastboot.htm">
+解決"fastboot too old; please download the latest version ..."問題</a><br>
 <br><br><br><br>
 
 </p>
