--- a/system.htm
+++ b/system.htm
@@ -297,6 +297,10 @@ VirtualBox產生vboxnet0 192.168.56.1</a><br>
   <a href="system/debian/arm_qemu_armhf.htm">
   使用qemu-system-arm安裝系統(armhf)</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="system/debian/fix_qemu_hda.htm">
+  解決QEMU versatilepb無法掛載hda的問題</a><br>
+
 &oplus;
 <b>MIPSEL</b><br>
 
