--- a/system.htm
+++ b/system.htm
@@ -298,6 +298,10 @@ VirtualBox產生vboxnet0 192.168.56.1</a><br>
   使用qemu-system-arm安裝系統(armhf)</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="system/debian/fix_qemu_sound.htm">
+  解決QEMU versatilepb沒有聲音的問題</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="system/debian/fix_qemu_hda.htm">
   解決QEMU versatilepb無法掛載hda的問題</a><br>
 
