FC3000 It is time to run FC3000 on QEMU environment. You can debug your app on QEMU environment easily. It is only software compatible, not hardware level.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4643,6 +4643,10 @@ L2R2改造</a><br>
 焊接UART</a><br>
 
 &lowast;
+<a href="handheld/fc3000/qemu.htm">
+QEMU環境</a><br>
+
+&lowast;
 <a href="handheld/miyoo/mksunxi.htm">
 mksunxi.c</a><br>
 
