Google Pixel 3a XL How to install droidian system.

--- a/phone.htm
+++ b/phone.htm
@@ -2033,6 +2033,13 @@ Google Pixel 3a XL</h3>
 &lowast;
 <a href="phone/pixel3axl/fix_fastboot.htm">
 解決"fastboot too old; please download the latest version ..."問題</a><br>
+
+&oplus;
+<b>Droidian</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="phone/pixel3axl/dd_install.htm">
+  安裝系統</a><br>  
 <br><br><br><br>
 
 </p>
