Google Pixel 3a XL Added partition table.

--- a/phone.htm
+++ b/phone.htm
@@ -2031,6 +2031,10 @@ Google Pixel 3a XL</h3>
 介紹</a><br>
 
 &lowast;
+<a href="phone/pixel3axl/partition.htm">
+Partition Table</a><br>
+
+&lowast;
 <a href="phone/pixel3axl/fix_fastboot.htm">
 解決"fastboot too old; please download the latest version ..."問題</a><br>
 
