Google Pixel 3a XL Fix kernel lz4 problem.

--- a/phone.htm
+++ b/phone.htm
@@ -2035,6 +2035,10 @@ Google Pixel 3a XL</h3>
 Partition Table</a><br>
 
 &lowast;
+<a href="phone/pixel3axl/fix_lz4.htm">
+為何無法選取CONFIG_KERNEL_LZ4</a><br>
+
+&lowast;
 <a href="phone/pixel3axl/fix_fastboot.htm">
 解決"fastboot too old; please download the latest version ..."問題</a><br>
 
