Google Pixel 3a XL How to restore boot.img back.

--- a/phone.htm
+++ b/phone.htm
@@ -2050,6 +2050,10 @@ Partition Table</a><br>
   安裝系統</a><br>  
   
   &emsp;&emsp;&lowast;
+  <a href="phone/pixel3axl/boot_restore.htm">
+  如何更新回原本boot.img</a><br>  
+  
+  &emsp;&emsp;&lowast;
   <a href="phone/pixel3axl/dd_fix_yylloc.htm">
   解決"multiple definition of yylloc"問題</a><br>  
 <br><br><br><br>
