FC3000 It is official support. Thanks RetroArch team's support.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4707,6 +4707,10 @@ V1、V2升級刷機教學</a><br>
 焊接MicroSD(4 Bits)</a><br>
 
 &lowast;
+<a href="handheld/fc3000/ra.htm">
+如何安裝官方RetroArch</a><br>
+
+&lowast;
 <a href="mcu/f1c100s/fix_microsd.htm">
 為何程式無法從MicroSD啟動</a><br>
 
