--- a/phone.htm
+++ b/phone.htm
@@ -2054,6 +2054,10 @@ Partition Table</a><br>
   如何更新回原本boot.img</a><br>  
   
   &emsp;&emsp;&lowast;
+  <a href="phone/pixel3axl/yaml.htm">
+  如何取得目前Keyboard使用的yaml檔案名稱</a><br>  
+  
+  &emsp;&emsp;&lowast;
   <a href="phone/pixel3axl/dd_fix_yylloc.htm">
   解決"multiple definition of yylloc"問題</a><br>  
 <br><br><br><br>
