--- a/phone/pixel3axl/boot_restore.htm
+++ b/phone/pixel3axl/boot_restore.htm
@@ -45,7 +45,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Google Pixel 3a XL</h3>
+<h3>Google Pixel 3a XL &gt;&gt; Droidian</h3>
 <p><b>如何更新回原本boot.img</b></p>
 <hr size="1">
 <p>
