--- a/phone/pixel3axl/partition.htm
+++ b/phone/pixel3axl/partition.htm
@@ -55,78 +55,78 @@
 如下：
 </p>
 <pre>
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 ImageFv -> /dev/block/mmcblk0p57
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 abl_a -> /dev/block/mmcblk0p26
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 abl_b -> /dev/block/mmcblk0p27
-lrwxrwxrwx 1 root root   20 1970-04-09 08:34 aop_a -> /dev/block/mmcblk0p8
-lrwxrwxrwx 1 root root   20 1970-04-09 08:34 aop_b -> /dev/block/mmcblk0p9
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 apdp_a -> /dev/block/mmcblk0p30
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 apdp_b -> /dev/block/mmcblk0p31
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 bluetooth_a -> /dev/block/mmcblk0p40
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 bluetooth_b -> /dev/block/mmcblk0p41
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 boot_a -> /dev/block/mmcblk0p13
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 boot_b -> /dev/block/mmcblk0p14
-lrwxrwxrwx 1 root root   20 1970-04-09 08:34 cdt -> /dev/block/mmcblk0p1
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 cmnlib64_a -> /dev/block/mmcblk0p18
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 cmnlib64_b -> /dev/block/mmcblk0p20
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 cmnlib_a -> /dev/block/mmcblk0p17
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 cmnlib_b -> /dev/block/mmcblk0p19
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 ddr -> /dev/block/mmcblk0p38
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 devcfg_a -> /dev/block/mmcblk0p51
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 devcfg_b -> /dev/block/mmcblk0p52
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 devinfo -> /dev/block/mmcblk0p29
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 dip -> /dev/block/mmcblk0p28
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 dpo -> /dev/block/mmcblk0p33
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 dtbo_a -> /dev/block/mmcblk0p44
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 dtbo_b -> /dev/block/mmcblk0p45
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 ffufw -> /dev/block/mmcblk0p67
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 frp -> /dev/block/mmcblk0p58
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 fsc -> /dev/block/mmcblk0p42
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 fsg -> /dev/block/mmcblk0p12
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 hyp_a -> /dev/block/mmcblk0p10
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 hyp_b -> /dev/block/mmcblk0p11
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 keymaster_a -> /dev/block/mmcblk0p15
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 keymaster_b -> /dev/block/mmcblk0p16
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 keystore -> /dev/block/mmcblk0p50
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 klog -> /dev/block/mmcblk0p65
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 limits -> /dev/block/mmcblk0p35
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 logfs -> /dev/block/mmcblk0p37
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 metadata -> /dev/block/mmcblk0p66
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 misc -> /dev/block/mmcblk0p49
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 modem_a -> /dev/block/mmcblk0p21
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 modem_b -> /dev/block/mmcblk0p22
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 modemcal -> /dev/block/mmcblk0p55
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 modemst1 -> /dev/block/mmcblk0p46
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 modemst2 -> /dev/block/mmcblk0p47
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 msadp_a -> /dev/block/mmcblk0p23
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 msadp_b -> /dev/block/mmcblk0p24
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 persist -> /dev/block/mmcblk0p48
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 qupfw_a -> /dev/block/mmcblk0p53
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 qupfw_b -> /dev/block/mmcblk0p54
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 rawdump -> /dev/block/mmcblk0p62
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 reserved -> /dev/block/mmcblk0p25
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 sec -> /dev/block/mmcblk0p39
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 splash -> /dev/block/mmcblk0p34
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 spunvm -> /dev/block/mmcblk0p32
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 ssd -> /dev/block/mmcblk0p43
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 sti -> /dev/block/mmcblk0p59
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 storsec_a -> /dev/block/mmcblk0p60
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 storsec_b -> /dev/block/mmcblk0p61
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 system_a -> /dev/block/mmcblk0p68
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 system_b -> /dev/block/mmcblk0p69
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 toolsfv -> /dev/block/mmcblk0p36
-lrwxrwxrwx 1 root root   20 1970-04-09 08:34 tz_a -> /dev/block/mmcblk0p6
-lrwxrwxrwx 1 root root   20 1970-04-09 08:34 tz_b -> /dev/block/mmcblk0p7
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 uefivar -> /dev/block/mmcblk0p56
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 userdata -> /dev/block/mmcblk0p72
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 vbmeta_a -> /dev/block/mmcblk0p63
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 vbmeta_b -> /dev/block/mmcblk0p64
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 vendor_a -> /dev/block/mmcblk0p70
-lrwxrwxrwx 1 root root   21 1970-04-09 08:34 vendor_b -> /dev/block/mmcblk0p71
-lrwxrwxrwx 1 root root   20 1970-04-09 08:34 xbl_a -> /dev/block/mmcblk0p2
-lrwxrwxrwx 1 root root   20 1970-04-09 08:34 xbl_b -> /dev/block/mmcblk0p3
-lrwxrwxrwx 1 root root   20 1970-04-09 08:34 xbl_config_a -> /dev/block/mmcblk0p4
-lrwxrwxrwx 1 root root   20 1970-04-09 08:34 xbl_config_b -> /dev/block/mmcblk0p5
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 ImageFv        -> /dev/mmcblk0p57
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 abl_a          -> /dev/mmcblk0p26
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 abl_b          -> /dev/mmcblk0p27
+lrwxrwxrwx 1 root root   20 1970-04-09 08:34 aop_a          -> /dev/mmcblk0p8
+lrwxrwxrwx 1 root root   20 1970-04-09 08:34 aop_b          -> /dev/mmcblk0p9
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 apdp_a         -> /dev/mmcblk0p30
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 apdp_b         -> /dev/mmcblk0p31
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 bluetooth_a    -> /dev/mmcblk0p40
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 bluetooth_b    -> /dev/mmcblk0p41
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 boot_a         -> /dev/mmcblk0p13
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 boot_b         -> /dev/mmcblk0p14
+lrwxrwxrwx 1 root root   20 1970-04-09 08:34 cdt            -> /dev/mmcblk0p1
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 cmnlib64_a     -> /dev/mmcblk0p18
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 cmnlib64_b     -> /dev/mmcblk0p20
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 cmnlib_a       -> /dev/mmcblk0p17
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 cmnlib_b       -> /dev/mmcblk0p19
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 ddr            -> /dev/mmcblk0p38
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 devcfg_a       -> /dev/mmcblk0p51
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 devcfg_b       -> /dev/mmcblk0p52
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 devinfo        -> /dev/mmcblk0p29
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 dip            -> /dev/mmcblk0p28
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 dpo            -> /dev/mmcblk0p33
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 dtbo_a         -> /dev/mmcblk0p44
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 dtbo_b         -> /dev/mmcblk0p45
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 ffufw          -> /dev/mmcblk0p67
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 frp            -> /dev/mmcblk0p58
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 fsc            -> /dev/mmcblk0p42
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 fsg            -> /dev/mmcblk0p12
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 hyp_a          -> /dev/mmcblk0p10
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 hyp_b          -> /dev/mmcblk0p11
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 keymaster_a    -> /dev/mmcblk0p15
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 keymaster_b    -> /dev/mmcblk0p16
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 keystore       -> /dev/mmcblk0p50
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 klog           -> /dev/mmcblk0p65
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 limits         -> /dev/mmcblk0p35
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 logfs          -> /dev/mmcblk0p37
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 metadata       -> /dev/mmcblk0p66
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 misc           -> /dev/mmcblk0p49
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 modem_a        -> /dev/mmcblk0p21
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 modem_b        -> /dev/mmcblk0p22
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 modemcal       -> /dev/mmcblk0p55
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 modemst1       -> /dev/mmcblk0p46
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 modemst2       -> /dev/mmcblk0p47
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 msadp_a        -> /dev/mmcblk0p23
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 msadp_b        -> /dev/mmcblk0p24
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 persist        -> /dev/mmcblk0p48
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 qupfw_a        -> /dev/mmcblk0p53
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 qupfw_b        -> /dev/mmcblk0p54
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 rawdump        -> /dev/mmcblk0p62
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 reserved       -> /dev/mmcblk0p25
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 sec            -> /dev/mmcblk0p39
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 splash         -> /dev/mmcblk0p34
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 spunvm         -> /dev/mmcblk0p32
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 ssd            -> /dev/mmcblk0p43
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 sti            -> /dev/mmcblk0p59
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 storsec_a      -> /dev/mmcblk0p60
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 storsec_b      -> /dev/mmcblk0p61
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 system_a       -> /dev/mmcblk0p68
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 system_b       -> /dev/mmcblk0p69
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 toolsfv        -> /dev/mmcblk0p36
+lrwxrwxrwx 1 root root   20 1970-04-09 08:34 tz_a           -> /dev/mmcblk0p6
+lrwxrwxrwx 1 root root   20 1970-04-09 08:34 tz_b           -> /dev/mmcblk0p7
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 uefivar        -> /dev/mmcblk0p56
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 userdata       -> /dev/mmcblk0p72
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 vbmeta_a       -> /dev/mmcblk0p63
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 vbmeta_b       -> /dev/mmcblk0p64
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 vendor_a       -> /dev/mmcblk0p70
+lrwxrwxrwx 1 root root   21 1970-04-09 08:34 vendor_b       -> /dev/mmcblk0p71
+lrwxrwxrwx 1 root root   20 1970-04-09 08:34 xbl_a          -> /dev/mmcblk0p2
+lrwxrwxrwx 1 root root   20 1970-04-09 08:34 xbl_b          -> /dev/mmcblk0p3
+lrwxrwxrwx 1 root root   20 1970-04-09 08:34 xbl_config_a   -> /dev/mmcblk0p4
+lrwxrwxrwx 1 root root   20 1970-04-09 08:34 xbl_config_b   -> /dev/mmcblk0p5
 </pre><br>
 
 <p>
