Google Pixel 3a XL How to repack boot.img file.

--- a/phone.htm
+++ b/phone.htm
@@ -2054,6 +2054,10 @@ Partition Table</a><br>
   如何更新回原本boot.img</a><br>  
   
   &emsp;&emsp;&lowast;
+  <a href="phone/pixel3axl/repack_boot_img.htm">
+  如何打包、更新boot.img</a><br>  
+  
+  &emsp;&emsp;&lowast;
   <a href="phone/pixel3axl/keyboard_layout.htm">
   如何客製化Keyboard Layout</a><br>  
   
