Google Pixel 3a XL Fix 'mdss_pll_trace.h No such file or directory' issue.

--- a/phone.htm
+++ b/phone.htm
@@ -2067,7 +2067,11 @@ Partition Table</a><br>
   
   &emsp;&emsp;&lowast;
   <a href="phone/pixel3axl/dd_fix_yylloc.htm">
-  解決"multiple definition of yylloc"問題</a><br>  
+  解決"multiple definition of yylloc"問題</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="phone/pixel3axl/dd_fix_tracepoint.htm">
+  解決"mdss_pll_trace.h No such file or directory"問題</a><br>
 <br><br><br><br>
 
 </p>
